--- a/django_news/templates/news/new_detail.html
+++ b/django_news/templates/news/new_detail.html
@@ -50,7 +50,7 @@
             <div class="row sub-para-w3layouts mt-5">
 
                 <h3 class="shop-sing editContent" style="outline: none; cursor: inherit;">
-                    О фильме {{ new.title }}
+                    {{ new.title }}
                 </h3>
                 <p class="editContent" style="outline: none; cursor: inherit;">
                     {{ new.description }}
